improvement: update video & chapter
